src/index.css
@import "tailwindcss";

@theme {
  --color-age-gold: #E8AA24;
  --color-age-dark: #111111;
  --color-age-green: #32CD32;
  --font-sans: "Inter", ui-sans-serif, system-ui, sans-serif;
  --animate-marquee: marquee 30s linear infinite;

  @keyframes marquee {
    0% {
      transform: translateX(0);
    }

    100% {
      transform: translateX(-33.33%);
    }
  }

  @keyframes marquee-slow {
    0% {
      transform: translateX(0);
    }

    100% {
      transform: translateX(-50%);
    }
  }

  --animate-marquee-slow: marquee-slow 40s linear infinite;
}

body {
  font-family: var(--font-sans);
  background-color: #f8f8f8;
}

/* Global Link Styles to prevent Blue color */
a,
Link {
  text-decoration: none !important;
  color: inherit;
}

/* Ensure no default blue on focus/active */
a:active,
a:focus {
  outline: none;
}

img {
  max-width: 100%;
  height: auto;
}

